fix storing season names/plot
by using a dirty hack (JSON only allows a string as map key, so our MediaEpisodeGroup needs to be serialized before)